--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,4 +67,4 @@ jobs:
           context: 'Test Summary Report'
           state: 'success'
           sha: ${{github.event.pull_request.head.sha || github.sha}}
-          target_url:  https://abdulrahmanmohamed2020.github.io/guardMe/${{ github.run_number }}
+          target_url:  https://github.com/abdulrahmanMohamed2020/petclinic-automation-test/${{ github.run_number }}
